feat: add filters for bfla and k8s object
